apps-old/prometheus/envs/prd/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress
  hostnames:
    - prometheus.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus
          port: 9090
